@@ -1,6 +1,6 @@
 // timeutil.h -- CLinearTimeAbsolute, and CLinearTimeDelta modules.
 //
-// $Id: timeutil.h,v 1.17 2006/01/07 05:31:52 sdennis Exp $
+// $Id: timeutil.h,v 1.18 2006/03/13 02:20:25 sdennis Exp $
 //
 // MUX 2.4
 // Copyright (C) 1998 through 2004 Solid Vertical Domains, Ltd. All
@@ -166,6 +166,8 @@ extern const INT64 FACTOR_100NS_PER_HOUR;
 extern const INT64 FACTOR_100NS_PER_DAY;
 extern const INT64 FACTOR_100NS_PER_WEEK;
 
+const CLinearTimeDelta time_200us = 200*FACTOR_100NS_PER_MICROSECOND;
+const CLinearTimeDelta time_5ms   = 5*FACTOR_100NS_PER_MILLISECOND;
 const CLinearTimeDelta time_250ms = 250*FACTOR_100NS_PER_MILLISECOND;
 const CLinearTimeDelta time_1s    = FACTOR_100NS_PER_SECOND;
 const CLinearTimeDelta time_15s   = 15*FACTOR_100NS_PER_SECOND;
@@ -177,7 +179,7 @@ const CLinearTimeDelta time_1w    = FACTOR_100NS_PER_WEEK;
 
 extern void TIME_Initialize(void);
 #ifdef WIN32
-extern BOOL CalibrateQueryPerformance(void);
+extern bool CalibrateQueryPerformance(void);
 #endif
 
 #ifdef SMALLEST_INT_GTE_NEG_QUOTIENT
