@@ -1,5 +1,5 @@
 TinyMUX 2.4:  CHANGES
-Last Update:  February 2006
+Last Update:  March 2006
 
 Major changes that may affect performance and require softcode tweaks:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -252,6 +252,8 @@ Bug Fixes:
  -- Fixed Hearer() where a spontaneous 'loses its ears' message could
     occur after setting an attribute.
  -- TELNET sub-option data was never saved in buffer.
+ -- Fix recent typo in MERGE().
+ -- On Win32, add more checking around use of GetPerformanceCounter().
 
 
 Performance Enhancements:
@@ -303,6 +305,8 @@ Performance Enhancements:
  -- Improve error message for '@mail *name' where players might have
     either mispelled the player name or attempted to use a @malias
     without including the subject.
+ -- In MEMORY_BASED, avoid malloc() call each time an attribute is
+    added to an object.
 
 
 Cosmetic Changes:
